# stg-engine

./: .gitignore  BUG_PROPAGATE_SAVE_CORRUPTION.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: COMMERCIAL_DRAFT.md  OPTIMIZATION_LOG.md
examples/: 01_basic_usage.py  02_persistence.py  03_hebbian_learning.py
internal/: PLUGIN_DISTRIBUTION_PLAN.md
scripts/: cleanup_path1_supersede.py
stg_engine/: STG_AGENT_GUIDE.md  __init__.py  _core_fallback.py  _rust_core.cp311-win_amd64.pyd  benchmark.py  cli.py  coactivation.py  cognitive.py  concept_skeleton.py  engine.py  epistemic.py  feedback.py  feedback_select.py  formulas.py  game_interface.py  gravity.py  importers.py  inhibition.py  kanerva.py  learning.py  markdown_extractor.py  merge.py  metrics.py  obsidian_importer.py  perception.py  persistence.py  recall.py  semantic.py  simulator.py  skill_runner.py  spec_extractor.py  telemetry.py  temporal.py  topology.py  types.py  universal_importer.py  visualize.py  world_model.py  xref.py
stg_engine/server/: __init__.py  app.py  engine_wrap.py  handlers.py  main.py  schemas.py  state.py
tests/: benchmark_real_stg.py  benchmark_scale.py  test_full_parity.py  test_propagate_parity.py
tests/integration/: test_server_v1_health_stats.py  test_server_v1_propagate_node_query.py
tests/unit/: test_recall.py  test_skill_executor.py
tests/unit/test_stg_engine/: test_benchmark.py  test_cli_config.py  test_cognitive.py  test_community_propagation.py  test_edge_merge.py  test_engine.py  test_entity_resolution.py  test_epistemic.py  test_feedback.py  test_gravity.py  test_importers.py  test_inhibition.py  test_intrinsic_properties.py  test_kanerva.py  test_learning.py  test_metrics.py  test_perception.py  test_semantic.py  test_supersede.py  test_telemetry.py  test_temporal.py  test_topology.py  test_types.py  test_universal_importer.py  test_xref.py
