[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stg-engine"
version = "0.5.0a6"
description = "Semantic Tension Graph — cognitive memory system for AI agents (BSL 1.1, free for noncommercial use, commercial license required for businesses)"
authors = [
    { name = "wuko", email = "contact@stl-lang.org" }
]
license = { text = "BUSL-1.1" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "stl-parser>=1.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
viz = ["plotly>=5.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
stg = "stg_engine.cli:main"

[project.urls]
Homepage = "https://stl-lang.org"
Documentation = "https://stl-lang.org"
Commercial-License = "https://stl-lang.org"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
# Pure-Python distribution. The repo contains an optional Rust acceleration
# core under `rust/` — it is compiled locally for development via maturin but
# is NOT shipped on PyPI during the alpha phase. The Python fallback inside
# stg_engine is the default runtime path for PyPI users.
#
# If a developer builds the Rust extension locally, `stg_engine/_rust_core.so`
# (or .pyd on Windows) will exist; the explicit excludes below keep it out of
# both wheel and sdist.

[tool.hatch.build.targets.wheel]
packages = ["stg_engine"]
exclude = [
    "stg_engine/_rust_core*.so",
    "stg_engine/_rust_core*.pyd",
    "stg_engine/__pycache__",
    "stg_engine/**/__pycache__",
]

[tool.hatch.build.targets.sdist]
include = [
    "/stg_engine",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "stg_engine/_rust_core*.so",
    "stg_engine/_rust_core*.pyd",
    "**/__pycache__",
    ".pytest_cache",
    "internal",
    "rust",
    "examples",
    "tests",
    "docs",
]
